--- a/rest-api/currency-app/currency-server/package.json
+++ b/rest-api/currency-app/currency-server/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
+    "cookie-parser": "^1.4.6",
     "currency.js": "^2.0.4",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
