added signin using google

--- a/rest-api/currency-app/currency-server/.env
+++ b/rest-api/currency-app/currency-server/.env
@@ -1,2 +1,5 @@
 PORT=3002
 API_BASE_URL=https://cdn.jsdelivr.net/gh/fawazahmed0/currency-api@1
+CLIENT_ID=1056381484856-fpmn9thbnburht4om9rh5hjuv6h6v1bs.apps.googleusercontent.com
+SECRET=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
+CLIENT_SECRET=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
