ignored unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-node_modules/
-**/node_modules/
+node_modules
+*/**/node_modules/
+out
+*/**/.idea
+.idea
+*/**/amqp-client-5.11.0-javadoc.jar
+*/**/amqp-client-5.11.0.jar
+*/**/slf4j-api-1.7.29-javadoc.jar
+*/**/slf4j-api-1.7.29.jar
+*/**/slf4j-simple-1.6.2-javadoc.jar
+*/**/slf4j-simple-1.6.2.jar
+*/**/package-lock.json
+*/**/__pycache__
+*/**/out
+*/**/.env
